closure-compiler updated to v20241106-1