@@ -16,7 +16,6 @@
 
 package com.google.javascript.jscomp.bundle;
 
-import static java.util.Arrays.asList;
 
 import com.google.auto.value.AutoValue;
 import com.google.common.annotations.GwtIncompatible;
@@ -28,10 +27,9 @@ import com.google.errorprone.annotations.CheckReturnValue;
 import com.google.errorprone.annotations.Immutable;
 import com.google.javascript.jscomp.deps.DependencyInfo;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Objects;
 import java.util.function.Function;
-import org.jspecify.nullness.Nullable;
+import org.jspecify.annotations.Nullable;
 
 /** An abstract representation of a source file. */
 @AutoValue
@@ -85,7 +83,7 @@ public abstract class Source {
         .setEstimatedSize(0);
   }
 
-  private static final Path DEV_NULL = Paths.get("/dev/null");
+  private static final Path DEV_NULL = Path.of("/dev/null");
 
   // Internal-only properties: the code suppliers are necessary for lazy bundling,
   // but we cannot use an ordinary supplier since we need guarantees about equals and
@@ -119,8 +117,7 @@ public abstract class Source {
     }
 
     public final Builder addRuntime(String... runtimes) {
-      return setRuntimes(
-          ImmutableSet.<String>builder().addAll(runtimes()).addAll(asList(runtimes)).build());
+      return setRuntimes(ImmutableSet.<String>builder().addAll(runtimes()).add(runtimes).build());
     }
 
     public final Builder setDependencyInfo(DependencyInfo info) {
